<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pageBackground"
        tools:context=".login.LoginActivity"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <TextView
            style="@style/TextView.AppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/guideline40"
            android:tag="tilUserName"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icn_person"
                android:drawablePadding="8dp"
                android:hint="@string/hint_username"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/tilUserName"
            app:endIconMode="password_toggle"
            android:tag="tilPassword"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icn_lock"
                android:drawablePadding="8dp"
                android:hint="@string/hint_password"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/swRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/tilPassword"
            app:layout_constraintTop_toBottomOf="@id/tilPassword" />

        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/info_remember_me"
            android:textSize="@dimen/font_size_18"
            app:layout_constraintBaseline_toBaselineOf="@id/swRemember"
            app:layout_constraintStart_toEndOf="@id/swRemember" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="20dp"
            android:text="@string/button_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swRemember" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>